@@ -41,7 +41,7 @@ class Tx_Seminars_Mapper_Registration extends Tx_Oelib_DataMapper {
 		'method_of_payment' => Tx_Seminars_Mapper_PaymentMethod::class,
 		'lodgings' => Tx_Seminars_Mapper_Lodging::class,
 		'foods' => 'tx_seminars_Mapper_Food',
-		'checkboxes' => 'tx_seminars_Mapper_Checkbox',
+		'checkboxes' => Tx_Seminars_Mapper_Checkbox::class,
 		'additional_persons' => Tx_Seminars_Mapper_FrontEndUser::class,
 	);
 }
