@@ -375,7 +375,7 @@ class tx_seminars_Mapper_EventDateTest extends Tx_Phpunit_TestCase {
 				'topic' => $topicUid,
 			)
 		);
-		$checkbox = tx_oelib_MapperRegistry::get('tx_seminars_Mapper_Checkbox')
+		$checkbox = tx_oelib_MapperRegistry::get(Tx_Seminars_Mapper_Checkbox::class)
 			->getNewGhost();
 		$this->testingFramework->createRelationAndUpdateCounter(
 			'tx_seminars_seminars', $topicUid, $checkbox->getUid(), 'checkboxes'
@@ -401,7 +401,7 @@ class tx_seminars_Mapper_EventDateTest extends Tx_Phpunit_TestCase {
 				'topic' => $topicUid,
 			)
 		);
-		$checkbox = tx_oelib_MapperRegistry::get('tx_seminars_Mapper_Checkbox')
+		$checkbox = tx_oelib_MapperRegistry::get(Tx_Seminars_Mapper_Checkbox::class)
 			->getNewGhost();
 		$this->testingFramework->createRelationAndUpdateCounter(
 			'tx_seminars_seminars', $topicUid, $checkbox->getUid(), 'checkboxes'
