@@ -13,6 +13,7 @@ Bug fixes:
 - [#5321] Update .htaccess to be Apache 2.4 compatible
 
 Cleanup:
+- [#5565] Rename tx_seminars_Mapper_Checkbox to Tx_Seminars_Mapper_Checkbox
 - [#5564] Rename tx_seminars_Mapper_Category to Tx_Seminars_Mapper_Category
 - [#5574] Rename tx_seminars_Mapper_BackEndUser to Tx_Seminars_Mapper_BackEndUser
 - [#5570] Rename tx_seminars_Mapper_FrontEndUser to Tx_Seminars_Mapper_FrontEndUser
